--- a/ProfSite/Views/Bravopets/index.cshtml
+++ b/ProfSite/Views/Bravopets/index.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div class="bottom-jumbo-overlay">
                     <h4>
-                        Extend flea and tick protection up to 12 weeks with a single chew.
+                        Extend flea and tick protection up to 12 weeks with a single chew.*
                     </h4>
                 </div>
             </div>
@@ -46,10 +46,11 @@
     <div class="container">
         <div class="row marketing-row">
             <p>
-                Tired of having to wait for traditional topical flea and tick treatments to dry before getting up close
-                to your dog? Accidentally miss treatments for months? Ask your vet today about the first and only
-                chewable flea and tick protection that tastes like a treat and lasts for up to 12 full weeks. Now, with
-                protection that works from the inside out, you never have to wait to snap the perfect selfie.
+                Ask your vet today about Bravecto – the first and only chewable
+                flea and tick protection that starts working in 2 hours and lasts up to
+                <span class="italic">12 full weeks</span>. That’s up to 3X longer than any other chewable or topical treatment!
+                Now, with protection that tastes like a treat and works from the inside out,
+                you never have to wait to snap the perfect selfie.
             </p>
         </div>
     </div>
@@ -66,11 +67,30 @@
         <div class="container">
             <h2>EXTEND A FAST-ACTING TREATMENT FOR MORE TIME TOGETHER.</h2>
             <p>
-                Monthly topical flea and tick solutions require your dog to stay away from you and your family
-                while the traditional treatment dries and takes effect. But, with some treatments, this can take anywhere
-                from 8 to 18 hours. And, monthly treatments can leave gaps where your dog is unprotected. Cut out
-                the waiting and keep on playing. Ask your vet about the first and only chew to kill fleas and ticks
-                within 2 hours of administration and keep working for up to 12 weeks.
+                With Bravecto you can give your dog better protection than traditional monthly treatments – and stop worrying about:
+            </p>
+            <ul class="list-items">
+                <li>
+                    Feeling guilty for missing a monthly treatment because of everything else on your mind
+                </li>
+                <li>
+                    Chasing down your dog to apply treatments to its skin
+                </li>
+                <li>Keeping your dog away from your family while the traditional topical treatment you applied dries</li>
+                <li>Having to wait for over 24 hours for protection to start working</li>
+                <li>Delaying application because you don’t want to put yourself or your dog through the stress</li>
+            </ul>
+            <p>
+                Just one Bravecto chewable starts killing fleas and ticks in just 2 hours, and provides up to 12 full weeks of continuous protection. Plus, Bravecto’s active ingredient is also a completely new compound, so there is no known insect or tick resistance to it – making protection worry-free.
+            </p>
+            <p>
+                With such fast-acting, continuous and innovative protection, you gain the most powerful defense available in a chew against a flea infestation on your pet or in your home. Studies show that it takes about 3 months to drive a flea infestation into “extinction” in the home environment.1 Monthly treatments can add to your stress during an infestation by requiring you to reapply the treatment every 28 days to ensure continuous protection until the fleas are driven out. And, if you accidentally miss an application or if the treatment allows fleas to lay eggs before it is re-applied? It could mean your home is never free of fleas.
+            </p>
+            <p>
+                With Bravecto’s long-lasting efficacy against adult fleas, you can potentially drive fleas to “extinction” in your household with just one treatment.<sup>2</sup>
+            </p>
+            <p>
+                It’s a treatment so innovative, only your veterinarian can offer it. <strong>Ask your vet about Bravecto today.</strong>
             </p>
             <div class="row">
                 <div class="bottom-bravopets-watch-row col-md-8 col-md-offset-2">
@@ -102,21 +122,21 @@
                 <img src="~/Content/img/calendar_icon.png" />
                 <h4>THE LONGEST-LASTING<br />CHEW EVER</h4>
                 <p>
-                    Keeps dogs protected for up to 12 weeks.*
+                    Keeps dogs protected for up to 12 full weeks.*
                 </p>
             </div>
             <div class="col-md-4">
                 <img src="~/Content/img/clock_icon.png" />
                 <h4>RAPIDLY KILLS AND <br />CONTINUOUSLY PROTECTS</h4>
                 <p>
-                    Protects dogs from a wide range of fleas and ticks.
+                    Dogs from both fleas and ticks.
                 </p>
             </div>
             <div class="col-md-4">
                 <img src="~/Content/img/raindrop_icon.png" />
-                <h4>WON'T<br />RINSE OFF</h4>
+                <h4>WON'T<br />WASH OFF</h4>
                 <p>
-                    Stays on while grooming washing or swimming.
+                    While grooming, washing or swimming.
                 </p>
             </div>
         </div>
@@ -125,21 +145,21 @@
                 <img src="~/Content/img/hand_icon.png" />
                 <h4>CLEAN AND<br /> EASY DOSING</h4>
                 <p>
-                    This means you can treat and hug.
+                    Means you can treat and hug, immediately.
                 </p>
             </div>
             <div class="col-md-4">
                 <img src="~/Content/img/calendar-alert_icon.png" />
                 <h4>FEWER CHANCES<br /> TO FORGET</h4>
                 <p>
-                    Only 4 doses are required for full-year protection.
+                    With only 4 doses required for full-year protection.
                 </p>
             </div>
             <div class="col-md-4">
                 <img src="~/Content/img/bug_icon.png" />
-                <h4>POWERFUL PROTECTION<br />FROM BOTH</h4>
+                <h4>CLINICALLY PROVEN <br />SAFE FOR ALL DOGS</h4>
                 <p>
-                    Protection against both fleas and ticks in one tasty chews.
+                    But deadly for fleas and ticks.
                 </p>
             </div>
         </div>
@@ -157,17 +177,16 @@
         <div class="container">
             <h2>LOOK OUT FOR THE ONE THAT'S ALWAYS LOOKING OUT FOR YOU.</h2>
             <p>
-                Monthly topical flea and tick solutions require your dog to stay away from you and your family
-                while the Studies show that monthly treatments are often forgotten<sup>1</sup> - with the average
-                dog only being protected from fleas and ticks for 2.8 months out of the year. That means that, for nearly
-                9 months every year, most dogs are at risk for not only infestations - but also diseases that fleas and ticks
-                carry. This can be a big problem, as some ticks are known to carry multiple infections that can complicate
-                treatment and lead to even greater health risks.
+                Parasiticide sales and market size data suggests that directions from the vet to the owner to apply treatments monthly are often not followed1 – on average, dogs only receive protection from fleas and ticks 2.8 months out of the year. That means that, for nearly 9 months every year, many dogs are at risk for infestations – and may have an increased risk of exposure to the diseases that fleas and ticks carry. This is a big problem, as ticks are known to carry multiple infections that can lead to greater health risks.
             </p>
             <p>
-                But, with just one chew, fleas and ticks don't stand a chance. Treat and prevent infestations for up to 12
-                full weeks - so you can help keep the furriest member of your family healthy, longer. Ask your vet about
-                the longest-lasting chewable treatment available today.
+                And, as wildlife populations, forest habitats and weather patterns change,3 ticks have expanded into new territories – making them more prevalent worldwide than ever before.
+            </p>
+            <p>
+                With just one Bravecto chew, fleas and ticks don’t stand a chance. Protect your dog from irritations and reduce the risk of tick-borne diseases with a chew that provides nearly a full-year coverage in just 4 doses. Keep your dog healthier, longer with the first and only chew that lasts up to 12 full weeks – that’s up to 3X longer than any other chewable or topical treatment available.
+            </p>
+            <p>
+                Only your vet can provide this length of protection from flea- and tick-borne diseases.<strong>Ask your vet about Bravecto today.</strong>
             </p>
             <div class="row health-items">
                 <div class="col-md-4">
@@ -225,11 +244,15 @@
         <div class="container">
             <h2>LONGER-LASTING PROTECTION FOR YOUR BEST FRIEND.</h2>
             <p>
-                Now all dogs can enjoy the longest-lasting protection available in a chew - no matter
-                where they are or what they're up to. And, it works quickly. So if your sidekick has an infestation,
-                just administer the chew and the fleas and ticks will start dying within just 2 hours - and,
-                within 24 hours, they'll all be dead.
+                With Bravecto, dogs can enjoy the longest-lasting protection available in a chew – no matter where they are or what they get up to. Bravecto stands up to all scrutiny with a very comprehensive safety profile. It has been rigorously tested and proven safe for dogs – even at multiple times the maximum clinical dose. Whether out saving the world or making a splash, Bravecto keeps working hard for up to 12 weeks for all dogs, including:
             </p>
+            <ul class="list-items">
+                <li>Dogs as young as 8 weeks old, that are at least 2 kg / 4.4 lbs.</li>
+                <li>Breeding dogs</li>
+                <li>Pregnant dogs</li>
+                <li>Lactating dogs</li>
+                <li class="underline">“Ivermectin-sensitive” dogs</li>
+            </ul>
         </div>
         <div class="container">
             <div class="row safety-list-items-row">
@@ -270,15 +293,15 @@
     <div class="static-body safety">
         <div class="container">
             <h2>FAQs</h2>
-            <p>Get the answers to some of the most frequently asked questions - or contact your vet to learn more.</p>
+            <p>Get quick answers to some of the most frequently asked questions – or contact your vet to learn more about Bravecto.</p>
             <ul class="list-unstyled faq-list">
                 <li class="question-item">
                     <div class="question">
-                        <p>Why is this treatment only available through veterinarians?</p>
+                        <p>Why is Bravecto only available through veterinarians?</p>
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
-                        <p></p>
+                        <p>The veterinarian is the expert on pet health and can advise on the best and most appropriate treatments for pets. The prescription only status is also a regulatory requirement.</p>
                     </div>
                 </li>
                 <li class="question-item">
@@ -288,11 +311,13 @@
                     </div>
                     <div class="content">
                         <p>
-                            After you give your dog this treatment, it quickly reaches tissue fluids just under your dog's skin.
-                            When fleas and ticks feed, they ingest the fluralaner module molecule and die. Fluralaner starts working
-                            within 2 hours. By 12 hours after treatment, fleas and ticks are dead. Fluralaner kills fleas, prevents flea
-                            infestations and kills ticks (black-legged tick, American dog tick and brown dog tick) for up to 12 weeks.
-                            It also kills lone star ticks for up to 8 weeks.
+                            After you give your dog Bravecto, it quickly reaches tissue fluids just under your dog's skin. The moment fleas and ticks attach to start feeding, they make contact with bodily fluids and ingest fluralaner, the active ingredient in Bravecto.
+                            Exposure to fluralaner paralyzes the fleas and ticks and then kills them
+                            shortly after. Bravecto starts working in just 2 hours.
+                            Within 12 hours of treatment, 100% of exposed fleas and ticks are dead.
+                            Bravecto kills fleas, prevents flea infestations and kills common ticks
+                            (<span class="italic">ixodes ricinus, dermacentor variabilis and dermacentor reticulatus</span>)
+                            for up to 12 weeks. Bravecto also kills Rhipicephalus sanguineus for up to 8 weeks.
                         </p>
                     </div>
                 </li>
@@ -300,12 +325,12 @@
                     <div class="question">
                         <p>
                             My dog is taking some medications for another condition as well right now. <br />Is it safe
-                            to give her this treatment as well?
+                            to give her Bravecto?
                         </p>
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
-                        <p></p>
+                        <p>It is always best to discuss all of your dog's treatments, whether prescription or over-the-counter supplements, with your veterinarian as they are your pet's health care expert.</p>
                     </div>
                 </li>
                 <li class="question-item">
@@ -316,7 +341,7 @@
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
-                        <p></p>
+                        <p>Bravecto is not approved for use in cats.</p>
                     </div>
                 </li>
                 <li class="question-item">
@@ -327,7 +352,7 @@
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
-                        <p></p>
+                        <p>In a US field study where dogs were treated at home, over 93% of dogs ate the tablet voluntarily—either by itself or with food.<sup>4</sup></p>
                     </div>
                 </li>
                 <li class="question-item">
@@ -338,7 +363,7 @@
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
-                        <p></p>
+                        <p>Bravecto can be given to your dog any time of the day.</p>
                     </div>
                 </li>
                 <li class="question-item">
@@ -349,14 +374,36 @@
                         <img src="~/Content/img/plus_icon.png" />
                     </div>
                     <div class="content">
-                        <p></p>
+                        <p>No</p>
                     </div>
                 </li>
             </ul>
         </div>
     </div>
 </div>
-
+<div class="container">
+    <div class="row">
+        <hr>
+    </div>
+    <div class="row">
+        <p>
+            * BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
+        </p>
+        <p>
+            1,2  Walther, Feli M., Mark J. Allan, Rainer KA Roepke, and Martin C. Nuernberger. "Efficacy of Indoxacarb Applied to Cats against the Adult Cat Flea, Ctenocephalides Felis, Flea Eggs and Adult Flea Emergence." Parasites & Vectors. N.p., 2014. Web. 20 Feb. 2015.
+        </p>
+        <p>
+            3 Beck S, Schein E, Baldermann C, von Samson-Himmelstjerna G, Kohn B. Tick infestation and tick prophylaxis in dogs in the area of Berlin/Brandenburg: results of a questionnaire study. Berliner und Münchener Tierärztliche Wochenschrift 126, Heft 1/2 (2013) Seiten 6–76.
+        </p>
+        <p>
+            4 Braun, David. "Disease-Spreading Ticks on the Move as Climate Changes." National Geographic. N.p., 07 Sept. 2012. Web. 13 Feb. 2015.
+        </p>
+        <p>
+            Copyright© 2015 Intervet, Inc., a subsidiary of Merck & Co., Inc. All rights reserved.
+        </p>
+    </div>
+</div>
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
