--- a/ProfSite/Views/Shared/SiteMap.cshtml
+++ b/ProfSite/Views/Shared/SiteMap.cshtml
@@ -13,11 +13,11 @@
                     <li class="has-children">
                         <a href="/bravecto">BRAVECTO<sup>&reg;</sup> Home</a>
                         <ul class="sitemap">
-                            <li><a href="/bravecto/support">@bvResources.SupportText</a></li>
-                            <li><a href="/bravecto/innovation">@bvResources.BravectoInnovation</a></li>
-                            <li><a href="/bravecto/products">@bvResources.ProductsText</a></li>
-                            <li><a href="/bravecto/about-us">@bvResources.AboutUsText</a></li>
-                            <li><a href="/bravecto/contact-us">@bvResources.ContactUsText</a></li>
+                            <li><a href="/support">@bvResources.SupportText</a></li>
+                            <li><a href="/innovation">@bvResources.BravectoInnovation</a></li>
+                            <li><a href="/products">@bvResources.ProductsText</a></li>
+                            <li><a href="/about-us">@bvResources.AboutUsText</a></li>
+                            <li><a href="/contact-us">@bvResources.ContactUsText</a></li>
                         </ul>
                     </li>
                     <li class="has-children">
@@ -26,7 +26,7 @@
                             <li><a href="/braovetsresources">@bvResources.BravectoResourcesMenu</a></li>
                             <li><a href="/trendingtopics">@bvResources.Shared_SiteMap_TrendingTopics</a></li>
                             <li><a href="/socialtips">@bvResources.Shared_SiteMap_SocialTips</a></li>
-                            <li><a href="/EditProfileAndFacility">@bvResources.Shared_SiteMap_EditProfile</a></li>
+                            <li><a href="/editprofile">@bvResources.Shared_SiteMap_EditProfile</a></li>
                         </ul>
                     </li>
                 </ul>
