--- a/ProfSite/Views/Shared/_LayoutBravecto.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravecto.cshtml
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/account/logout">
+                            <a href="/logout">
                                 LOGOUT
                             </a>
                         </li>
