--- a/ProfSite/Views/Shared/_LayoutBravovets.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravovets.cshtml
@@ -54,7 +54,7 @@
                     <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/contact-us">CONTACT US</a></li>
                 </ul>
             </nav>
-            <a href="/" class="navbar-brand bravovets">
+            <a href="/linked-accounts" class="navbar-brand bravovets">
                 <img src="~/images/logo-bravovets@2x.png" alt="Bravecto Logo" class="logo-bravecto">
             </a>
         </div>
@@ -99,7 +99,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/account/logout">
+                            <a href="/logout">
                                 LOGOUT
                             </a>
                         </li>
